style.css
body {
    background-color: #2b2b2b;
}

#main {
    height: 547px;
    width: 797px;
    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.4), 0px 3px 14px rgba(0, 0, 0, 0.24),
        0px 8px 10px rgba(0, 0, 0, 0.28);
    margin: 5% auto 0;
}

#result {
    height: 150px;
    background: #3a3a3a;
    font-family: 'Girassol', cursive;
    color: #fff;
    font-size: 6em;
    text-align: right;
    padding-right: 24px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

#input-area .flex-row {
    height: 100px;
    display: flex;
}

.btn {
    box-sizing: border-box;
    font-family: 'IBM Plex Sans', sans-serif;
    width: 25%;
    font-size: 2em;
    font-weight: bold;
    border: 1px solid #3a3a3a;
}

.default-btn {
    background-color: #f5f5f5;
}

.default-btn:hover {
    background-color: #ebebeb;
}

.clear-btn {
    background-color: #f9d2d2;
}

.clear-btn:hover {
    background-color: #fab6b6;
}

.operator-btn {
    background-color: #dcffec;
}

.operator-btn:hover {
    background-color: #b9f4d4;
}

.btn .fa-circle {
    font-size: 0.3em;
}

